# AutoCue

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  vitest.config.js
.agent/: tasks.json  tasks.performance.json
.claude/: fixer.yaml  launch.json  prp-ralph.state.md  settings.json
.githooks/: pre-commit
autocue/: __init__.py  analyzer.py  cache.py  cache_reset.py  cli.py  db_writer.py  download.py  generator.py  models.py  perf.py  writer.py
crew/: .gitignore  BOARD.md  DESIGN.md  auditor.md  implementer.md  researcher.md  test-designer.md  test-verifier.md
docs/: CC-WORKTREES.md  DESIGN-WORKFLOW.md  FEATURES.md  VERIFY-WORKFLOW.md  architecture-blueprint.md  crew-workflow-guardrails.md  index.html  qa_fixer.md  qa_tester.md
tests/: conftest.py  test_analyzer.py  test_anlz_path.py  test_auto_tag.py  test_auto_tag_parallel.py  test_cache.py  test_cache_reset.py  test_cache_warmup.py  test_classify.py  test_classify_score_l2.py  test_classify_similar_parallel.py  test_comment.py  test_concurrency.py  test_concurrency_invariants.py  test_cue_accuracy.py  test_db_writer.py  test_discogs.py  test_discogs_v2.py  test_discover_backup_sidecar.py  test_discover_budget_audit.py  test_discover_feeders.py  test_discover_novelty.py  test_discover_orchestrator.py  test_discover_orchestrator_crash_safety.py  test_discover_ranker.py  test_discover_routes.py  test_discover_state_routes.py  test_discover_stats_shape.py  test_discover_store.py  test_discover_store_race.py  test_discover_store_t012.py  (+38 more)
(+435 files in other folders)
