[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocue"
version = "0.1.0"
description = "Automatically place hot cues on tracks in your Rekordbox 7 library"
requires-python = ">=3.10"
dependencies = [
    "pyrekordbox>=0.3.0",
]

[project.scripts]
autocue = "autocue.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
